<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fragment_statistic_table_padding">

    <TextView
        android:id="@+id/table_c1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/table_column1_title" />

    <TextView
        android:id="@+id/table_c2"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:text="@string/table_column2_title" />

    <TextView
        android:id="@+id/table_c3"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:text="@string/table_column3_title" />

    <TextView
        android:id="@+id/table_c4"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:text="@string/table_column4_title" />

</TableRow>