<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/customer_info_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/customer_info_rl_height"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/customer_picture_tv"
            android:layout_width="@dimen/picture_width"
            android:layout_height="@dimen/picture_height"
            android:layout_centerInParent="true"
            android:background="@mipmap/default_profile"
            android:contentDescription="@string/default_picture" />

        <TextView
            android:id="@+id/customer_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/customer_picture_tv"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_5"
            android:text="@string/username_sample"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/customer_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/customer_name_tv"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_5"
            android:text="@string/address_sample"
            android:textColor="@color/white" />

    </RelativeLayout>

    <EditText
        android:id="@+id/customer_search_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customer_info_rl"
        android:hint="@string/search"
        android:maxLines="1"
        android:singleLine="true" />

    <TextView
        android:id="@+id/customer_assets_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_search_et"
        android:background="@color/green_400"
        android:text="@string/assets"
        android:textColor="@color/white" />

    <include
        android:id="@+id/include"
        layout="@layout/navigation_bar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/customer_list_stores_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/include"
        android:layout_below="@+id/customer_assets_tv">

    </android.support.v7.widget.RecyclerView>
</RelativeLayout>