<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/stores_search_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:maxLines="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:singleLine="true" />

    <TextView
        android:id="@+id/store_total_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stores_search_et"
        android:textSize="20dp"
        android:layout_marginLeft="5dp"
        android:text="@string/sample_number" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stores_search_et"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/store_total_number_tv"
        android:textSize="20dp"
        android:text="@string/stores" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/store_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/store_total_number_tv">

    </android.support.v7.widget.RecyclerView>
</RelativeLayout>