<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="gem.training3.enterprisenetwork.screen.login.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome_app_name_1"
                android:textColor="#114773"
                android:textSize="60dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome_app_name_2"
                android:textColor="#114773"
                android:textSize="60dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/login_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="@dimen/welcome_signup_bt"
                android:layout_height="wrap_content"
                app:mrl_rippleColor="@color/blue_800"
                app:mrl_rippleOverlay="true"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                >

                <Button
                    android:id="@+id/login_login_bt"
                    android:layout_width="@dimen/welcome_signup_bt"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundbutton"

                    android:padding="10dp"
                    android:text="@string/action_sign_in_short"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp" />
            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pbLogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        />
</LinearLayout>
