<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" />

    <EditText
        android:id="@+id/products_search_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:hint="@string/search"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginLeft="@dimen/list_product_search_margin_left"
        />

    <TextView
        android:layout_marginLeft="@dimen/list_product_search_margin_left"
        android:id="@+id/products_total_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/products_search_et"
        android:text="@string/sample_number"
        android:textSize="@dimen/common_textSize"
        />

    <TextView
        android:id="@+id/products_total_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/products_search_et"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/products_total_number_tv"
        android:text="@string/product"
        android:textSize="@dimen/common_textSize"/>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/products_total_number_tv"
        android:layout_above="@+id/include2">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/product_list_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/product_list_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </FrameLayout>


    <include layout="@layout/navigation_bar"
        android:id="@+id/include2" />
</RelativeLayout>